--- a/client/views/sign-up-form.html
+++ b/client/views/sign-up-form.html
@@ -22,6 +22,6 @@
       <input type="hidden" name="address" ng-model="user.address">
     </div>
 
-    <button class="ui button" type="submit">Sign up</button>
+    <button class="ui button" ng-class="{ 'loading': isRegistering }" type="submit">Sign up</button>
   </form>
 </div>
