--- a/client/views/aid-services.html
+++ b/client/views/aid-services.html
@@ -6,7 +6,7 @@
     </a>-->
 
     <a href="#" class="item">Explore</a>
-    <a href="#" class="item">Pending</a>
+    <a href="#pending-services" class="item">Pending</a>
     <a href="#" class="item">Done</a>
     <a href="#" class="item">History</a>
     <a ng-click="addEditService()" class="item">Add new</a>
@@ -61,6 +61,8 @@
     <div class="ui cards" style="width: 100%; margin-top: 90px;">
       <div class="card" ng-repeat="service in SYBServices  | filter: {ServiceType:categoryFilter, UserCreated:userFilter } track by $index ">
         <div class="content">
+          {{service.id}}
+          {{service.ServiceType}}
           <div class="right floated mini ui"><i class="{{getServiceTypeIcon(service.ServiceType)}}  icon redAid"></i></div>
           <div class="header blueAid" ng-bind="service.Name"></div>
           <div class="meta" ng-bind="service.Price + ' eth'"></div>
