--- a/client/views/aid-services.html
+++ b/client/views/aid-services.html
@@ -7,8 +7,8 @@
 
     <a href="#" class="item">Explore</a>
     <a href="#pending-services" class="item">Pending</a>
-    <a href="#" class="item">Done</a>
-    <a href="#" class="item">History</a>
+    <a href="#done-services" class="item">Done</a>
+    <a href="#history-services" class="item">History</a>
     <a ng-click="addEditService()" class="item">Add new</a>
   </div>
 </div>
@@ -89,7 +89,7 @@
 
     <div ng-bind="selectedService.Description"></div>
     <br />
-    <button ng-if="showEdit(service.UserCreated)"   class="ui ok green button">Buy</button>
+    <button ng-if="!showEdit(selectedService.UserCreated)"   class="ui ok green button">Buy</button>
   </div>
 </div>
 
