App - transaction pending
App - transaction pending

--- a/client/views/aid-services.html
+++ b/client/views/aid-services.html
@@ -5,10 +5,9 @@
       <img class="logo" src="assets/images/logo.png">
     </a>-->
 
-    <a href="#" class="item">Explore</a>
-    <a href="#pending-services" class="item">Pending</a>
-    <a href="#done-services" class="item">Done</a>
-    <a href="#history-services" class="item">History</a>
+    <a ui-sref="index" class="item">Explore</a>
+    <a ui-sref="pending-services" class="item">Pending orders</a>
+    <a ui-sref="done-services" class="item">Finished orders</a>
     <a ng-click="addEditService()" class="item">Add new</a>
   </div>
 </div>
