--- a/client/views/done-services.html
+++ b/client/views/done-services.html
@@ -1,49 +1,80 @@
 <div class="ui fixed inverted menu blueBg">
-        <div class="ui container">
-          <!--
-          <a href="#" class="header item">
-            <img class="logo" src="assets/images/logo.png">
-          </a>-->
-      
-          <a href="#" class="item">Explore</a>
-          <a href="#" class="item">Pending</a>
-          <a href="#" class="item">Done</a>
-          <a href="#" class="item">History</a>
-          <a ng-click="addEditService()" class="item">Add new</a>
-        </div>
-      </div>
-      
-      
-      
-      
-      
-      <div class="ui grid">
-        <div class="two wide column"></div>
-      
-        <div class="fourteen wide column">
-          <div>
-              <table>
-                  <thead>
-                          <td>Category</td>
-                          <td>From</td>
-                          <td>To</td>
-                          <td>Title</td>              
-                  </thead>
-                  <tbody>
-                      <tr ng-repeat="service in doneServices">
-                          <td>{{service[1]}}</td>
-                          <td>{{service[2]}}</td>
-                          <td>{{service[3]}}</td>
-                          <td>{{service[7]}}</td>
-                      </tr>
-                  </tbody>
-      
-              </table>
-              {{service}}
-          </div>
-      
-        </div>
-      </div>
-      <div class="two wide column"></div>
-      
-      
+  <div class="ui container">
+    <!--
+    <a href="#" class="header item">
+      <img class="logo" src="assets/images/logo.png">
+    </a>-->
+
+    <a ui-sref="index" class="item">Explore</a>
+    <a ui-sref="pending-services" class="item">Pending orders</a>
+    <a ui-sref="done-services" class="item">Finished orders</a>
+  </div>
+</div>
+
+
+
+
+
+<div class="ui grid" style="margin-top: 20px;">
+  <div class="two wide column"></div>
+
+  <div class="twelve wide column">
+
+    <div class="ui top attached tabular menu">
+      <div class="active item" data-tab="first">Offered services</div>
+      <div class="item" data-tab="second">Ordered services</div>
+    </div>
+    <div class="ui bottom attached tab segment active" data-tab="first">
+        <table class="ui celled padded table">
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>From</th>
+                    <th>To</th>
+                    <th>Title</th>      
+                </tr>        
+            </thead>
+            <tbody>
+                <tr ng-repeat="service in offeredServices">
+                    <td ng-bind='categoryName([service[1]])'></td>
+                    <td ng-bind='service[2]'></td>
+                    <td ng-bind='service[3]'></td>
+                    <td ng-bind='service[7]'></td>
+                </tr>
+            </tbody>
+
+        </table>
+    </div>
+
+    <div class="ui bottom attached tab segment" data-tab="second">
+        <table class="ui celled padded table">
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>From</th>
+                    <th>To</th>  
+                </tr>        
+            </thead>
+            <tbody>
+                <tr ng-repeat="service in orderedServices">
+                    <td ng-bind='categoryName([service[1]])'></td>
+                    <td ng-bind='service[2]'></td>
+                    <td ng-bind='service[3]'></td>
+                </tr>
+            </tbody>
+
+        </table>
+    </div>
+
+
+
+       
+
+  </div>
+
+  <div class="two wide column"></div>
+</div>
+
+<script type="text/javascript">
+    $('.menu .item').tab();
+</script>
