--- a/client/views/pending-services.html
+++ b/client/views/pending-services.html
@@ -5,11 +5,9 @@
       <img class="logo" src="assets/images/logo.png">
     </a>-->
 
-    <a href="#" class="item">Explore</a>
-    <a href="#" class="item">Pending</a>
-    <a href="#" class="item">Done</a>
-    <a href="#" class="item">History</a>
-    <a ng-click="addEditService()" class="item">Add new</a>
+    <a ui-sref="index" class="item">Explore</a>
+    <a ui-sref="pending-services" class="item">Pending orders</a>
+    <a ui-sref="done-services" class="item">Finished orders</a>
   </div>
 </div>
 
@@ -21,6 +19,12 @@
   <div class="two wide column"></div>
 
   <div class="twelve wide column">
+
+    <div class="ui top attached tabular menu">
+      <div class="active item" data-tab="first">Offered services</div>
+      <div class="item" data-tab="second">Ordered services</div>
+    </div>
+    <div class="ui bottom attached tab segment active" data-tab="first">
         <table class="ui celled padded table">
             <thead>
                 <tr>
@@ -31,7 +35,7 @@
                 </tr>        
             </thead>
             <tbody>
-                <tr ng-repeat="service in pendingServices">
+                <tr ng-repeat="service in offeredServices">
                     <td ng-bind='categoryName([service[1]])'></td>
                     <td ng-bind='service[2]'></td>
                     <td ng-bind='service[3]'></td>
@@ -40,10 +44,39 @@
             </tbody>
 
         </table>
+    </div>
+
+    <div class="ui bottom attached tab segment" data-tab="second">
+        <table class="ui celled padded table">
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>From</th>
+                    <th>To</th>  
+                    <th></th>  
+                </tr>        
+            </thead>
+            <tbody>
+                <tr ng-repeat="service in orderedServices">
+                    <td ng-bind='categoryName([service[1]])'></td>
+                    <td ng-bind='service[2]'></td>
+                    <td ng-bind='service[3]'></td>
+                    <td><button ng-click='onPay(service)'>PAY</button></td>
+                </tr>
+            </tbody>
+
+        </table>
+    </div>
+
+
+
+       
 
   </div>
 
   <div class="two wide column"></div>
 </div>
 
-
+<script type="text/javascript">
+    $('.menu .item').tab();
+</script>
