--- a/client/views/pending-services.html
+++ b/client/views/pending-services.html
@@ -61,7 +61,7 @@
                     <td ng-bind='categoryName([service[1]])'></td>
                     <td ng-bind='service[2]'></td>
                     <td ng-bind='service[3]'></td>
-                    <td><button ng-click='onPay(service)'>PAY</button></td>
+                    <td><button class="ui button primary" style="width: 100%" ng-click='onPay(service)'>PAY</button></td>
                 </tr>
             </tbody>
 
